# ai-bootcamp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  test_neo4j_connection.py
.claude/agents/: bootcamp-notebook-creator.md  bootcamp-workshop-planner.md
.claude/docs/openai-api/: api-reference.md  conversation-state.md  developer-quickstart.md  function-calling.md  images-and-vision.md  structured-output.md  text-generation.md  using-tools.md
material/ai-and-llms/friday/: README.md
material/ai-and-llms/multimodality/: README.md
material/ai-and-llms/multimodality/session_1/: contacts.py  multimodal_workshop.ipynb  payment_models.py  utils.py
material/ai-and-llms/multimodality/session_2/: product_similarity_search.ipynb
material/ai-and-llms/orchestration/session_1/: README.md  orchestration_concepts.ipynb  orchestration_examples.py
material/ai-and-llms/orchestration/session_2/: README.md
material/ai-and-llms/orchestration/session_2/solution/: main.py  nutrition_agent.py  parser_agent.py  tools.py
material/ai-and-llms/orchestration/session_2/starter_code/: main.py  nutrition_agent.py  parser_agent.py  tools.py
material/ai-and-llms/prompting/session_1/: customer_feedback_samples.txt  prompting_workshop.ipynb
material/ai-and-llms/prompting/session_2/: README.md  sample_receipt.txt
material/ai-and-llms/prompting/session_2/solution/: extractor.py  main.py  models.py
material/ai-and-llms/retrieval/session_1/: README.md  framna_company_info.txt  rag_workshop.ipynb
material/ai-and-llms/retrieval/session_2/: README.md
material/ai-and-llms/tuesday/session_1/: README.md  demo_customer_feedback.py
material/ai-and-llms/wednesday/session_1/: orchestration_examples.py
material/backend-and-evals/: README.md
material/backend-and-evals/part-1/: README.md  run.py  test_api.ipynb
material/backend-and-evals/part-1/app/api/: main.py
material/week_1/thursday/session_1/: framna_qa_database.txt
material/week_1/tuesday/session_1/: prompting_patterns_examples.py
material/week_1/tuesday/session_2/: README.md
material/week_1/wednesday/session_1/: README.md
material/week_1/wednesday/session_2/: README.md  meal_queries.txt
(+24 files in other folders)
