[project]
name = "ai-bootcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.20",
    "ipykernel>=6.30.1",
    "langchain-community>=0.3.28",
    "langchain-openai>=0.3.32",
    "langchain>=0.3.27",
    "neo4j>=5.28.2",
    "numpy>=2.3.2",
    "openai-agents>=0.2.8",
    "openai>=1.100.1",
    "pandas>=2.3.2",
    "pdf2image>=1.17.0",
    "pdfminer>=20191125",
    "pdfminer-six>=20250506",
    "pydantic[email]>=2.11.7",
    "python-dotenv>=1.1.1",
    "tiktoken>=0.11.0",
    "scikit-learn>=1.7.1",
    "rich>=14.1.0",
    "tqdm>=4.67.1",
    "matplotlib>=3.10.5",
    "opencv-python>=4.11.0.86",
    "ultralytics>=8.3.189",
    "seaborn>=0.13.2",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "python-multipart>=0.0.6",
    "aiosqlite>=0.19.0",
    "pydantic-settings>=2.10.1",
]
